# real_matjib_code

./: .gitignore  README.md  pyproject.toml
data_collection/: get_kakaomap_moreview_list.ipynb  get_kakaomap_review_photos.ipynb  gmaps_info_api.ipynb  gmaps_labeling.ipynb  google_maps_api.ipynb  google_maps_selenium_re.ipynb  instagram_tags.ipynb  naver_download_images.py  navermap_clean_reviews.py  navermap_get_blog.py  navermap_get_restaurants.py  navermap_get_reviews.py
labelling/: labelling_naver.py
modelling/: navermap_model.py  navermap_preprocess.py  training.py
team_collaboration/: git_github_tutorial.md  git_lfs_tutorial.md
