[project]
name = "real-matjib-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "selenium>=4.33.0",
    "tqdm>=4.67.1",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pandas-stubs>=2.2.3.250527",
    "ruff>=0.11.13",
    "types-tqdm>=4.67.0.20250516",
]
