[project]
name = "real-matjib-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pathlib>=1.0.1",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
    "requests-cache>=1.2.1",
    "scikit-learn>=1.7.0",
    "selenium>=4.33.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "webdriver-manager>=4.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pandas-stubs>=2.2.3.250527",
    "ruff>=0.11.13",
    "types-requests>=2.32.4.20250611",
    "types-tqdm>=4.67.0.20250516",
]
